# swp

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  swp.1  swp.bc  wallpaper.c  wallpaper.h
